[package]
name = "async-federation"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "2.4.7"
async-trait = "0.1"
thiserror = "1.0"
serde_json = "1.0.61"
serde = "1.0.119"
serde_derive = "1.0.119"
reqwest = { version = "0.11.0", optional = true, features = ["json"] }
http = "0.2.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[features]
default = [ "gateway", "reqwest" ]
gateway = []
